<resources>
    <string name="app_name">True False</string>

    <string name="question_text">Question will appear here?</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="action_settings">Settings</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="play_again">Play Again</string>
    <string name="levels">Levels</string>
    <string name="quit_game">Quit Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_end">EndActivity</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
